spacing fix

--- a/style.css
+++ b/style.css
@@ -525,7 +525,7 @@ p {
   font-weight: 650;
   text-align: right;
   padding-right: 10%;
-  margin-top: 8%;
+  margin-top: 5%;
 }
 
 /*---------------------------------------------------
